# automata-trade-conductor-binance

./: .env  Dockerfile  README.md  requirements.txt  setup.cfg
binance/: BinanceTradeConductor.py  __main__.py
binance/executor/: BinanceTradeExecutor.py
binance/executor/handler/: TradeSubmissionHandler.py
binance/executor/transformer/: BinanceTradeTransformer.py
binancetrade/: BinanceTradeConductor.py  __main__.py
binancetrade/executor/: BinanceTradeExecutor.py
binancetrade/executor/handler/: TradeSubmissionHandler.py
binancetrade/executor/transformer/: BinanceTradeTransformer.py
simulation/api/: trade-market-submit.sh
simulation/createtrade/: BinanceTradeConductorSimulation.py  __init__.py
simulation/executetrade/: BinanceTradeConductorSimulation.py  __init__.py
simulation/runprofile/: __init__.py
simulation/submittrade/: TradeCreatorAndSubmitter.py  __init__.py
simulation/trade/: TradeCraftHandler.py  __init__.py
simulation/transform/: TradeTransformStoreHandler.py  TransformRuleStoreHandler.py  __init__.py
src/binance/: BinanceTradeConductor.py  __main__.py
src/binance/arguments/: command_line_arguments.py
src/binance/executor/: BinanceTradeExecutor.py
src/binance/executor/handler/: TradeSubmissionHandler.py
src/binance/executor/transformer/: BinanceTradeTransformer.py
src/binance/executor/transformer/error/: TradeTransformException.py
tests/binance/executor/handler/: TradeSubmissionHandler_test.py
tests/binancetrade/executor/handler/: TradeSubmissionHandler_test.py
