[metadata]
name = persuader-technology-automata-trade-conductor-binance
version = 0.1.0
description = Automata Binance Trade Conductor
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    binance-connector==1.11.0
    persuader-technology-automata-core>=0.4.3
    persuader-technology-automata-utilities>=0.0.9
    persuader-technology-automata-trade-executor>=0.0.9
    persuader-technology-automata-config>=0.1.0
    persuader-technology-automata-trade-transform-repository>=0.0.4

[options.packages.find]
include = binancetrade*
exclude =
    tests
    simulations
    .scripts
