[metadata]
name = persuader-technology-automata-trade-conductor-binance
version = 0.2.0
description = Automata Binance Trade Conductor
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    binance-connector==1.11.0
    persuader-technology-automata-core>=0.5.1
    persuader-technology-automata-utilities>=0.1.1
    persuader-technology-automata-redis>=0.3.3
    persuader-technology-automata-process-manager>=0.1.7
    persuader-technology-automata-trade-executor>=0.1.2
    persuader-technology-automata-config>=0.1.2
    persuader-technology-automata-trade-transform-repository>=0.0.8
    persuader-technology-automata-auth>=0.1.1

[options.packages.find]
include = binancetrade*
exclude =
    tests
    simulations
    .scripts

[options.entry_points]
console_scripts =
    automata-binance-trade-conductor-start = binancetrade.__main__:start
